--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,7 +13,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: 迁出代码
-        use: actions/checkout@master
+        uses: actions/checkout@master
 
       - name: Build Docker image
         run: |
