--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,4 +28,29 @@ jobs:
 
       - name: Run in Docker container
         run: |
-          docker run --rm rn_image sh start.sh
+          docker run --rm --name my_rn_container rn_image sh start.sh
+
+      # - name: Upload APK to GitHub Releases
+      #   uses: actions/upload-artifact@v2
+      #   with:
+      #     name: my-app-apk
+      #     path: android/app/build/outputs/apk/release/app-release.apk
+
+      - name: Create Release
+        id: create_release
+        uses: actions/create-release@v1
+        with:
+          tag_name: v1.0.0
+          release_name: Release v1.0.0
+          draft: false
+          prerelease: false
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Upload APK to Release
+        uses: actions/upload-release-asset@v1
+        with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }}
+          asset_path: android/app/build/outputs/apk/release/app-release.apk
+          asset_name: app-release.apk
+          asset_content_type: application/vnd.android.package-archive
