--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,27 +30,29 @@ jobs:
         run: |
           docker run --rm --name my_rn_container rn_image sh start.sh
 
-      # - name: Upload APK to GitHub Releases
-      #   uses: actions/upload-artifact@v2
-      #   with:
-      #     name: my-app-apk
-      #     path: android/app/build/outputs/apk/release/app-release.apk
-
-      - name: Create Release
-        id: create_release
-        uses: actions/create-release@v1
+      - name: Upload APK to GitHub Releases
+        uses: actions/upload-artifact@v2
         with:
-          tag_name: v1.0.0
-          release_name: Release v1.0.0
-          draft: false
-          prerelease: false
-        env:
-          GITHUB_TOKEN: ${{ secrets.TOKEN }}
+          name: my-app-apk
+          path: android/app/build/outputs/apk/release/app-release.apk
 
-      - name: Upload APK to Release
+      # - name: Create Release
+      #   id: create_release
+      #   uses: actions/create-release@v1
+      #   with:
+      #     tag_name: v1.0.0
+      #     release_name: Release v1.0.0
+      #     draft: false
+      #     prerelease: false
+      #   env:
+      #     GITHUB_TOKEN: ${{ secrets.TOKEN }}
+
+      - name: Upload APK to Existing Release
         uses: actions/upload-release-asset@v1
         with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: /tmp/app.apk
-          asset_name: app-release.apk
+          upload_url: https://uploads.github.com/repos/Jimmylxue/react-native-ci/releases/192439895/assets?name=my-app-apk.apk
+          asset_path: android/app/build/outputs/apk/release/app-release.apk
+          asset_name: my-app-apk.apk
           asset_content_type: application/vnd.android.package-archive
+        env:
+          GITHUB_TOKEN: ${{ secrets.TOKEN }}
