--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,50 +2,32 @@ name: 打包React-native安卓环境
 
 on:
   push:
-    # push 代码的时候 哪个分支会受到影响 这里是 master 主分支
     branches:
       - main
   workflow_dispatch:
 
-# 推送之后执行一系列的任务
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
       - name: 迁出代码
-        uses: actions/checkout@master
+        uses: actions/checkout@v2
+
+      - name: 缓存 Docker layers
+        uses: actions/cache@v3
+        with:
+          path: /tmp/.buildx-cache
+          key: ${{ runner.os }}-docker-${{ github.sha }}
+          restore-keys: |
+            ${{ runner.os }}-docker-
 
       - name: Build Docker image
         run: |
-          docker build -t rn_image .
-
-      # - name: Run in Docker container
-      #   uses: docker://RN-IMAGE
-      #   with:
-      #   args: |
-      #     npx envinfo
-      #     sh start.sh
+          DOCKER_BUILDKIT=1 docker build --cache-from=type=local,src=/tmp/.buildx-cache -t rn_image .
 
       - name: Run in Docker container
         run: |
           docker run --rm --name my_rn_container rn_image sh start.sh
-
-      # - name: Upload APK to GitHub Releases
-      #   uses: actions/upload-artifact@v2
-      #   with:
-      #     name: my-app-apk
-      #     path: android/app/build/outputs/apk/release/app-release.apk
-
-      # - name: Create Release
-      #   id: create_release
-      #   uses: actions/create-release@v1
-      #   with:
-      #     tag_name: v1.0.0
-      #     release_name: Release v1.0.0
-      #     draft: false
-      #     prerelease: false
-      #   env:
-      #     GITHUB_TOKEN: ${{ secrets.TOKEN }}
 
       - name: Upload APK to Existing Release
         uses: actions/upload-release-asset@v1
