--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -33,7 +33,7 @@ jobs:
         uses: actions/upload-release-asset@v1
         with:
           upload_url: https://uploads.github.com/repos/Jimmylxue/react-native-ci/releases/192439895/assets?name=my-app-apk.apk
-          asset_path: android/app/build/outputs/apk/release/app-release.apk
+          asset_path: /tmp/app.apk
           asset_name: my-app-apk.apk
           asset_content_type: application/vnd.android.package-archive
         env:
