--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,6 +29,10 @@ jobs:
         run: |
           docker run --rm --name my_rn_container rn_image sh start.sh
 
+      - name: Copy Apk
+        run: |
+          docker cp my_rn_container:/app/react-native-project/h5pack-native/app-release.apk /tmp/app.apk
+
       - name: Upload APK to Existing Release
         uses: actions/upload-release-asset@v1
         with:
