--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -35,7 +35,7 @@ jobs:
 
       - name: Copy Apk
         run: |
-          docker cp my_rn_container:/app/react-native-project/h5pack-native/app-release.apk /tmp/app.apk
+          docker cp my_rn_container:/app/react-native-project/h5pack-native/app-release.apk /home/runner/work/react-native-ci/react-native-ci/app.apk
 
       - name: check pwd
         run: |
@@ -43,7 +43,7 @@ jobs:
 
       - name: check Apk
         run: |
-          cd /tmp
+          cd /home/runner/work/react-native-ci/react-native-ci
 
       - name: check Apk2
         run: |
@@ -53,7 +53,7 @@ jobs:
         uses: actions/upload-release-asset@v1
         with:
           upload_url: https://uploads.github.com/repos/Jimmylxue/react-native-ci/releases/192439895/assets?name=app.apk
-          asset_path: /tmp/app.apk
+          asset_path: /home/runner/work/react-native-ci/react-native-ci/app.apk
           asset_name: app.apk
           asset_content_type: application/vnd.android.package-archive
         env:
