--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -60,9 +60,9 @@ jobs:
       - name: Upload APK to Existing Release
         uses: actions/upload-release-asset@v1
         with:
-          upload_url: https://uploads.github.com/repos/Jimmylxue/react-native-ci/releases/192439895/assets?name=app.apk
+          upload_url: https://uploads.github.com/repos/Jimmylxue/react-native-ci/releases/192439895/assets?name=name=${{ github.run_id }}-${{ github.run_number }}.apk
           asset_path: /home/runner/work/react-native-ci/react-native-ci/app.apk
-          asset_name: app.apk
+          asset_name: name=${{ github.run_id }}-${{ github.run_number }}.apk
           asset_content_type: application/vnd.android.package-archive
         env:
           GITHUB_TOKEN: ${{ secrets.TOKEN }}
