--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,9 +1,6 @@
 name: 打包React-native安卓环境
 
 on:
-  push:
-    branches:
-      - main
   workflow_dispatch:
 
 jobs:
@@ -25,16 +22,12 @@ jobs:
         run: |
           docker cp my_rn_container:/app/react-native-project/h5pack-native/android/app/build/outputs/apk/release/app-release.apk /home/runner/work/react-native-ci/react-native-ci/app.apk
 
-      - name: check ls
-        run: |
-          ls
-
       - name: Upload APK to Existing Release
         uses: actions/upload-release-asset@v1
         with:
-          upload_url: https://uploads.github.com/repos/Jimmylxue/react-native-ci/releases/192439895/assets?name=${{ github.run_id }}-${{ github.run_number }}.apk
+          upload_url: https://uploads.github.com/repos/Jimmylxue/react-native-ci/releases/192439895/assets?name=${{ github.run_number }}-${{ github.run_id }}.apk
           asset_path: /home/runner/work/react-native-ci/react-native-ci/app.apk
-          asset_name: ${{ github.run_id }}-${{ github.run_number }}.apk
+          asset_name: ${{ github.run_number }}-${{ github.run_id }}.apk
           asset_content_type: application/vnd.android.package-archive
         env:
           GITHUB_TOKEN: ${{ secrets.TOKEN }}
