--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -68,7 +68,7 @@ jobs:
 
       - name: Copy Apk
         run: |
-          docker cp my_rn_container:/app/react-native-project/h5pack-native/android/app/build/outputs/apk/release/app-release.apk /home/runner/work/react-native-ci/react-native-ci/app.apk
+          docker cp my_rn_container:/app/react-native-project/${{ github.event.inputs.repo_url | basename .git }}/android/app/build/outputs/apk/release/app-release.apk /home/runner/work/react-native-ci/react-native-ci/app.apk
 
       - name: Upload APK to Existing Release
         uses: actions/upload-release-asset@v1
