copy阶段 文件名动态引入2

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -68,7 +68,8 @@ jobs:
 
       - name: Copy Apk
         run: |
-          docker cp my_rn_container:/app/react-native-project/${{ github.event.inputs.repo_url | basename .git }}/android/app/build/outputs/apk/release/app-release.apk /home/runner/work/react-native-ci/react-native-ci/app.apk
+          REPO_NAME=$(basename ${{ github.event.inputs.repo_url }} .git)
+          docker cp my_rn_container:/app/react-native-project/$REPO_NAME/android/app/build/outputs/apk/release/app-release.apk /home/runner/work/react-native-ci/react-native-ci/app.apk
 
       - name: Upload APK to Existing Release
         uses: actions/upload-release-asset@v1
